fix(schema): Исправлена структура API
1. Оставлена только таблица `products` и `units`
3. В controllers/products.go убран лишний unit_id
4. Исправлены ЭП для units
5. Актуализирована схема БД
6. Так же исправлено описание README
7. Исправлены PUT и DELETE для units
