# api/models/dish_ingredient.go
@@ -1,8 +1,0 @@
-package models
-
-type DishIngredient struct {
-	ID        int `json:"id"`
-	DishID    int `json:"dish_id"`
-	ProductID int `json:"product_id"`
-	Quantity  int `json:"quantity"`
-}
