# api/models/menu.go
@@ -1,7 +1,0 @@
-package models
-
-type MenuItem struct {
-	ID        int  `json:"id"`
-	DishID    int  `json:"dish_id"`
-	Available bool `json:"available"`
-}
